--- a/ichrisbirch/app/static/sass/base/_base.scss
+++ b/ichrisbirch/app/static/sass/base/_base.scss
@@ -15,5 +15,5 @@ h2 {
 }
 
 h3 {
-    font-size: var(--fs-500);
+    font-size: var(--fs-600);
 }
